AC_INIT([bric], [git], [noone@localhost], ,['https://github.com/shnupta/bric'])
AM_INIT_AUTOMAKE([subdir-objects])
AC_PREREQ(2.69)
AC_CONFIG_HEADERS([src/config.h:config.in])
AC_PROG_CC([cc])
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_INSTALL

AC_CONFIG_FILES([       Makefile
                        src/Makefile])
AC_OUTPUT
